force-app/main/default/objects/Candidate__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Candidate&apos;s Full Name</description>
    <label>Full Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>