force-app/main/default/objects/Candidate__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Candidate&apos;s Phone Number</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>