force-app/main/default/objects/Candidate__c/fields/USA_Visa_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>USA_Visa_Valid_To__c</fullName>
    <description>USA Visa Valid To</description>
    <label>USA Visa Valid To</label>
    <type>Date</type>
</CustomField>