force-app/main/default/objects/Candidate__c/fields/Working_Company__c.field-meta.xml
<CustomField>
    <fullName>Working_Company__c</fullName>
    <description>Working Company of the candidate</description>
    <label>Working Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>