force-app/main/default/objects/Candidate__c/fields/Years_in_IT__c.field-meta.xml
<CustomField>
    <fullName>Years_in_IT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total experience in IT (years)</description>
    <label>Years in IT</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>