force-app/main/default/objects/Candidate__c/listViews/CTO_Queue_Candidate.listView-meta.xml
<ListView>
    <fullName>CTO_Queue_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>CTO Queue</label>
    <queue>CTO_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>